# evo-X

./: Makefile.am  NEWS  README  configure.ac
patches/: THANKS  banned_by.rar  check_number_of_proff_at_login.rar
sql/: Makefile.am  characters.sql  evo-X_characters.sql  evo-X_realmd.sql  evo-X_world.sql
sql/Dual_Specialization/: mangos_updates_dual_spec.sql
sql/anticheat/: characters_anticheat.sql
sql/evo-x-updates/: 10_world_command.sql  2_world_db_version_evo_x.sql  3_characters_tickets.sql  (+7 more)
src/: CMakeLists.txt  Makefile.am
src/bindings/luascript/: CppScriptMgr.cpp  CppScriptMgr.h  How to run it.txt  LUA_Engine.cpp  LUA_Engine.h  LUA_Player.cpp  LUA_Player.h  Lua_AI.cpp  Lua_AI.h  Lua_Creature.cpp  Lua_Creature.h  Lua_Unit.cpp  Lua_Unit.h  Lua_exports.cpp  Lua_exports.h  Lua_uint64.cpp  Lua_uint64.h  Makefile.am  ScriptMgr.cpp  ScriptMgr.h  TODO.txt  config.h  lua++.h  lua_defines.h  luainc.h  luascript.vcproj  lunar.h  sc_defines.cpp  sc_defines.h  system.cpp
src/bindings/luascript/cpp-scripts/: CppScripts.cpp  README
src/bindings/luascript/cpp-scripts/custom/: sc_marshal_mcbride.cpp  sc_silas_darkmoon.cpp  sc_skorn_whitecloud.cpp
src/bindings/luascript/cpp-scripts/guards/: sc_guard_bluffwatcher.cpp  sc_guard_darnassus.cpp  sc_guard_dunmorogh.cpp  sc_guard_durotar.cpp  sc_guard_elwynnforest.cpp  sc_guard_ironforge.cpp  sc_guard_mulgore.cpp  sc_guard_orgrimmar.cpp  sc_guard_stormwind.cpp  sc_guard_teldrassil.cpp  sc_guard_tirisfal.cpp  sc_guard_undercity.cpp
src/bindings/luascript/cpp-scripts/honor/alliance/: sc_alliance_commander.cpp  sc_alliance_corporal.cpp  sc_alliance_field_marshal.cpp  sc_alliance_grand_marshal.cpp  sc_alliance_knight-captain.cpp  sc_alliance_knight-lieutenant.cpp  sc_alliance_knight.cpp  sc_alliance_knight_champion.cpp  sc_alliance_lieutenant_commander.cpp  sc_alliance_marshal.cpp  sc_alliance_master_sergeant.cpp  sc_alliance_private.cpp  sc_alliance_sergeant.cpp  sc_alliance_sergeant_major.cpp
src/bindings/luascript/cpp-scripts/honor/horde/: sc_horde_blood_guard.cpp  sc_horde_centurion.cpp  sc_horde_champion.cpp  sc_horde_first_sergeant.cpp  sc_horde_general.cpp  sc_horde_grunt.cpp  sc_horde_high_warlord.cpp  sc_horde_legionaire.cpp  sc_horde_lieutenant_general.cpp  sc_horde_scout.cpp  sc_horde_senior_sergeant.cpp  sc_horde_sergeant.cpp  sc_horde_stone_guard.cpp  sc_horde_warlord.cpp
src/bindings/luascript/cpp-scripts/serveus/: sc_battlemaster.cpp  sc_guildmaster.cpp  sc_travelmaster.cpp
src/bindings/luascript/lua-scripts/: Masterscript.lua
src/bindings/luascript/lua-scripts/LuaScript/: AI.lua  CallBacks.lua  Extension.lua  Mango.lua  ScriptMgr.lua  defines.lua  example.lua  sc_default.lua
src/bindings/luascript/lua-scripts/LuaScript/AIs/: default_ai.lua  sc_default_guard.lua  sc_tranquil_gardens.lua
src/bindings/luascript/lua-scripts/LuaScript/Mango/: Mango.DataStore.lua  Mango.IO.lua  Mango.Scripts.lua  Mango.Stubby.lua  Mango.Utils.lua
src/bindings/luascript/lua-scripts/LuaScript/guards/: guard_stormwind.lua  guard_teldrassil.lua  guard_tirisfal.lua  sc_guard_bluffwatcher.lua  sc_guard_contested.lua.wip  sc_guard_darnassus.lua  sc_guard_dunmorogh.lua  sc_guard_durotar.lua  sc_guard_elwynnforest.lua  sc_guard_ironforge.lua  sc_guard_mulgore.lua  sc_guard_orgrimmar.lua  sc_guard_stormwind.lua  sc_guard_teldrassil.lua  sc_guard_tirisfal.lua  sc_guard_undercity.lua
src/bindings/luascript/lua-scripts/LuaScript/misc/: sc_misc_bombay.lua
src/bindings/luascript/lua/lib/: lua5.lib  lua5d.lib
src/bindings/luascript/lua/win/: lua5.ncb  lua5.sln  lua5.vcproj
src/bindings/luascript/patches/: README.txt  patch_hack_for_loadscripts.txt
src/bindings/luascript/sql/: cpp-scripts.sql  lua-scripts.sql
win/: evo-XVC90.sln  evoX.sln  mangosdVC100.sln  mangosdVC80.sln
(+268 files in other folders)
